# ebs

./: .config.yml.swp  .gitignore  README.md  Try_Parameter_Values.ipynb  config.yml  config2.yml  config202311121737.yml  config20231112t1756.yml  config20231112t1931.yml  config20231115t1006.yml  config3.yml  config4.yml  config_mcmc.yml  config_quick.yml  environment.yml  example.py  exosims.yml  exosims_by_hand.yml  flake8.txt  freak.py  grep.txt  log  mcmc.yml  parameters.yml  prototype_mcmc.ipynb  pyproject.toml  ref.yml  run_mcmc_ebs.py  runlog.txt  scratchpad.ipynb  setup.py
Roman_Coronagraph_ETC-main/: runlog20230508t1722.txt
doc/: Derive_WFE_WFSC_Vis_Sensitivity_Values_from_References.ipynb  Post-Processing Factor.html  Post-Processing Factor.ipynb  flowchart_error_budget.drawio.html  input_parameters_reference.xlsx  mcmc_instruction.md
ebs/: __init__.py  cli_interface.py  ebs.py  error_budget.py  log_pdf.py  logger.py  parameter_sweep.py  utils.py  visualization.py
freak/: freak.py
inputs/: .~lock.input.xlsx#  baseline_config.yml  baseline_contrast.csv  baseline_sensitivity.csv  baseline_throughput.csv  baseline_wfsc.csv  config_mcmc.yml  config_quick.yml  contrast.csv  contrast_1325437821.csv  contrast_1773365063.csv  contrast_4420342609.csv  contrast_4905156977.csv  contrast_5505350469.csv  contrast_5696520386.csv  contrast_6478614037.csv  contrast_6675292285.csv  contrast_72148950.csv  contrast_7301604589.csv  contrast_8002225993.csv  contrast_8053073422.csv  contrast_8233158063.csv  contrast_9369494367.csv  example_contrast.csv  example_pp.json  (+45 more)
(+142 files in other folders)
